--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 CONNECT_MONGODB = mongodb+srv://yousef:Project-Practice-Myself-Ecommerce@cluster0.z76arzz.mongodb.net/?retryWrites=true&w=majority
 SECRET_SESSION=this is my secret secret to hash express session .....
+SERVER_URL=http://localhost:8080
